@@ -320,12 +320,19 @@ namespace libTravian
 		{
 			get
 			{
-				if(Produce < 0)
-					return new TimeSpan(0, 0, Convert.ToInt32(Convert.ToInt64(CurrAmount) * 3600 / -Produce));
-				else if(Produce > 0)
-					return new TimeSpan(0, 0, Convert.ToInt32(Convert.ToInt64(Capacity - CurrAmount) * 3600 / Produce));
-				else
+				try
+				{
+					if (Produce < 0)
+						return new TimeSpan(0, 0, Convert.ToInt32(Convert.ToInt64(CurrAmount) * 3600 / -Produce));
+					else if (Produce > 0)
+						return new TimeSpan(0, 0, Convert.ToInt32(Convert.ToInt64(Capacity - CurrAmount) * 3600 / Produce));
+					else
+						return new TimeSpan(1, 0, 0, 0);
+				}
+				catch (OverflowException)
+				{
 					return new TimeSpan(1, 0, 0, 0);
+				}
 			}
 		}
 		public int CurrAmount
