@@ -1,5 +1,14 @@
-﻿以下功能暂时不可用：
+﻿以下功能最近几个月别想用了：
 1、出兵
+
+-= Stran 1.2.5 [GoldenFox] 发布 =-
+- 修正了运输探测的问题 (感谢firefox)
+- 修正了派对和研发升级探测的问题 (感谢chihsun)
+
+-= Stran 1.2.4 [GoldenCOMX] 发布 =-
+- 添加了单个村庄的大致资源比例情况显示。1表示10%到19.9%范围，7表示70%到79.9%范围，E=空(只有粮食会空)，F=满
+- 添加了COMX最新版本的支持
+- 修复BUG1649
 
 -= Stran 1.2.3 [GoldenPhoenix] 发布 =-
 - 添加了新增田(7田等)的数据
